--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cra-template-typescript": "1.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -33,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
