--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "cra-template-typescript": "1.2.0",
+    "firebase": "^11.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "^7.1.5",
