--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "cra-template-typescript": "1.2.0",
+    "firebase": "^11.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
