--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/react-icons": "^3.0.0",
     "cra-template-typescript": "1.2.0",
     "firebase": "^11.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "typescript": "^5.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
